# todo

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  frontend-CLAUDE.md.backup  pyproject.toml
.spec-kit/: config.yaml
.specify/memory/: constitution.md
archived/phase-1-console/: README.md
archived/phase-1-console/src/: __init__.py
backend/: .env.example  .gitignore  CLAUDE.md  alembic.ini  package-lock.json  package.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_sessions_table.py  003_create_tasks_table.py
backend/app/: database.py  dependencies.py  main.py
backend/app/middleware/: rate_limit.py
backend/app/models/: session.py  task.py  user.py
backend/app/routers/: auth.py  tasks.py
backend/app/utils/: jwt.py  password.py
frontend/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/signin/: page.tsx
frontend/components/: ThemeToggle.tsx
frontend/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/docs/: AUTHENTICATION_SECURITY.md  TASK_CRUD_INTEGRATION.md
frontend/hooks/: useAuth.ts
frontend/lib/: auth-client.ts  auth.ts
frontend/lib/api/: auth.ts  (+2 more)
frontend/scripts/: generate-schema.ts
frontend/types/: task.ts  user.ts
specs/001-todo-console-app/: data-model.md
specs/phase-2/: architecture.md  overview.md
src/: main.py
src/cli/: commands.py  display.py
src/models/: __init__.py
src/services/: task_service.py
(+77 files in other folders)
